# Copyright (C) 2015-2018 cryptosource GmbH
#
# Changelog of the fleaTLS cryptographic library
# http://keepachangelog.com/en/1.0.0/
#
# fleaTLS uses semantic versioning. However, in verion 1 there will still be
# minor API changes between minor versions. From version 2 on, API changes will
# only appear in new major versions.
#

## [ X.X.X ] UNRELEASED

### Fixed
- insufficient initialization in the flea_ae_ctx_t__INIT macro resp. ctor, leading to
use of uninitialized value in the flea_ae_ctx_t object and thus faulty
computations. No security implications known.
- failure during TLS KEX signature verification when a
certificate chain of total length 2 is used and the root is not sent

### Changed
- renamed THR_flea_ecb_mode_crypt_data to THR_flea_ecb_ctx_t__crypt_data to
fit the naming convention
- changed a number of API functions to fulfill the C99 limitation of 31
	significant characters for external identifiers. The following renamings
	(<from> <to>) were perfomed on the API of fleaTLS (with substring matching):
  - flea_public_key_t flea_pubkey_t
  - flea_private_key_t flea_privkey_t
  - flea_ctr_mode_prng_t__randomize flea_ctr_mode_prng_t__rndmz
  - flea_ec_dom_par__get_predefined_dp_ flea_ec_dom_par__get_predef_
  - flea_tls_client_ctx_t flea_tls_clt_ctx_t
  - flea_tls_server_ctx_t flea_tls_srv_ctx_t
  - flea_tls__get_tls_cert_type_from_flea_pk_scheme flea_tls__tls_cert_type_from_pk_scheme
  - THR_flea_x509_cert__get_ref_to_tbs_byte_vec THR_flea_x509_cert__get_bv_ref_to_tbs
  - THR_flea_x509__verify_tls_server THR_flea_x509__vrfy_tls_srv
  - flea_tls_client_session_t flea_tls_clt_session_t
  - verify_signature vrfy_sgntr
  - THR_flea_pubkey__generate_ecc_key_pair_by_dp_id THR_flea_pubkey__by_dp_id_gen_ecc_key_pair
  - THR_flea_privkey_t__pkcs8_create_ THR_flea_privkey_t__p8_create_
  - THR_flea_privkey_t__decrypt_message_ THR_flea_privkey_t__decr_msg_